--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/screen.css" />
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
 
@@ -43,7 +43,7 @@
 
 
 
-<header id="site-head" style="background-image: url(/content/images/2013/Nov/sari_safari_elephant.JPG)">
+<header id="site-head" style="background-image: url(content/images/2013/Nov/sari_safari_elephant.JPG)">
     <div class="vertical">
         <div id="site-head-content" class="inner">
 
@@ -229,7 +229,7 @@
 
 
 
-    <script type="text/javascript" src="/assets/js/index.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 
 </body>
 </html>
